--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!-- navbar -->
 
 <!-- router-outlet -->
+<section class="router-outlet">
+  <router-outlet></router-outlet>
+</section>
 
 <!-- footer -->
