--- a/src/app/modules/pokemons/pokemons.component.html
+++ b/src/app/modules/pokemons/pokemons.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<pok-navbar></pok-navbar>
+<main class="container">
+  <router-outlet></router-outlet>
+</main>
+<pok-footer></pok-footer>
