--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,3 +1,20 @@
-<ng-container *ngIf="pokemon$ | async as pokemon">
-  <mat-card class="card">{{ pokemon.name }}</mat-card>
+<ng-container *ngIf="pokemon">
+  <mat-card class="card animate__animated animate__rubberBand">
+    <mat-card-header class="card-header">
+      <mat-card-title>{{ pokemon.name }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content class="card-content">
+      <img [src]="pokemon.pic" [alt]="pokemon.name" loading="lazy" />
+    </mat-card-content>
+
+    <mat-card-actions class="card-actions">
+      <button mat-icon-button color="warn" (click)="addToTeam()">
+        <mat-icon *ngIf="!inTeam">favorite_border</mat-icon>
+        <mat-icon *ngIf="inTeam">favorite</mat-icon>
+      </button>
+      <button mat-icon-button color="primary" (click)="seeDetails()">
+        <mat-icon>visibility</mat-icon>
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </ng-container>
