--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -1,5 +1,9 @@
 <ng-container *ngIf="pokemons">
   <section class="list">
-    <pok-card *ngFor="let pokemon of pokemons" [pokemon]="pokemon"></pok-card>
+    <pok-card
+      [inTeam]="inTeam"
+      *ngFor="let pokemon of pokemons"
+      [pokemon]="pokemon"
+    ></pok-card>
   </section>
 </ng-container>
