--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -8,9 +8,14 @@
     </mat-card-content>
 
     <mat-card-actions class="card-actions">
-      <button mat-icon-button color="warn" (click)="addToTeam()">
-        <mat-icon *ngIf="!inTeam">favorite_border</mat-icon>
-        <mat-icon *ngIf="inTeam">favorite</mat-icon>
+      <button
+        [disabled]="inTeam"
+        mat-icon-button
+        color="warn"
+        (click)="addToTeam()"
+      >
+        <mat-icon *ngIf="!pokemon.inTeam">favorite_border</mat-icon>
+        <mat-icon *ngIf="pokemon.inTeam">favorite</mat-icon>
       </button>
       <button mat-icon-button color="primary" (click)="seeDetails()">
         <mat-icon>visibility</mat-icon>
