--- a/src/app/modules/welcome/pages/home/home.component.html
+++ b/src/app/modules/welcome/pages/home/home.component.html
@@ -1,3 +1,5 @@
 <pok-navbar></pok-navbar>
-<main class="container"></main>
+<main class="container">
+  <pok-routes></pok-routes>
+</main>
 <pok-footer></pok-footer>
