--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="pokemon">
-  <mat-card class="card animate__animated animate__rubberBand">
+  <mat-card class="card animate__animated animate__fadeIn">
     <mat-card-header class="card-header">
       <mat-card-title>{{ pokemon.name }}</mat-card-title>
     </mat-card-header>
