--- a/src/app/modules/welcome/components/route/route.component.html
+++ b/src/app/modules/welcome/components/route/route.component.html
@@ -1,1 +1,13 @@
-<p>route works!</p>
+<ng-container *ngIf="route">
+  <mat-card
+    [ngStyle]="{ 'background-color': route.background_color }"
+    class="card"
+  >
+    <mat-card-header>
+      <mat-card-title>{{ route.name | uppercase }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <img [src]="route.img" [alt]="route.name" />
+    </mat-card-content>
+  </mat-card>
+</ng-container>
