--- a/src/app/modules/welcome/components/routes/routes.component.html
+++ b/src/app/modules/welcome/components/routes/routes.component.html
@@ -1,1 +1,3 @@
-<section class="routes"></section>
+<section class="routes">
+  <pok-route *ngFor="let route of routes" [route]="route"></pok-route>
+</section>
