--- a/src/app/modules/welcome/components/routes/routes.component.scss
+++ b/src/app/modules/welcome/components/routes/routes.component.scss
@@ -3,9 +3,10 @@
 .routes {
   background-color: rgba($color: #000000, $alpha: 0.1);
   border-radius: 1rem;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
   margin: 0 auto;
   max-width: 1440px;
   padding: 2rem;
-  @include center;
 }
