--- a/src/app/modules/welcome/components/route/route.component.scss
+++ b/src/app/modules/welcome/components/route/route.component.scss
@@ -1,6 +1,23 @@
-.card {
-  img {
-    max-height: 378px;
-    width: 100%;
+@import "../../../../../assets/styles/base";
+
+:host {
+  .card {
+    cursor: pointer;
+
+    img {
+      max-height: 378px;
+      width: 100%;
+    }
+
+    mat-card-header {
+      @include center;
+    }
+
+    mat-card-title {
+      font-weight: bolder;
+      letter-spacing: 5px;
+      text-align: center;
+      width: 100%;
+    }
   }
 }
