--- a/src/app/modules/pokemons/pages/team/team.component.html
+++ b/src/app/modules/pokemons/pages/team/team.component.html
@@ -1,7 +1,26 @@
-<ng-container *ngIf="pokemons$ | async as pokemons; else loading">
-  <pok-list-grid [inTeam]="true" [pokemons]="pokemons"></pok-list-grid>
+<ng-container *ngIf="pokemons$ | async as pokemons">
+  <pok-list-grid
+    *ngIf="pokemons.length > 0; else noPokemons"
+    [inTeam]="true"
+    [pokemons]="pokemons"
+  ></pok-list-grid>
 </ng-container>
 
-<ng-template #loading>
-  <pok-spinner></pok-spinner>
+<ng-template #noPokemons>
+  <section class="no-pokemons">
+    <h3 class="jt --debug">
+      <span class="jt__row">
+        <span class="jt__text">There are no pokemons on your team yet...</span>
+      </span>
+      <span class="jt__row jt__row--sibling" aria-hidden="true">
+        <span class="jt__text">There are no pokemons on your team yet...</span>
+      </span>
+      <span class="jt__row jt__row--sibling" aria-hidden="true">
+        <span class="jt__text">There are no pokemons on your team yet...</span>
+      </span>
+      <span class="jt__row jt__row--sibling" aria-hidden="true">
+        <span class="jt__text">There are no pokemons on your team yet...</span>
+      </span>
+    </h3>
+  </section>
 </ng-template>
