--- a/src/app/modules/pokemons/components/card/card.component.scss
+++ b/src/app/modules/pokemons/components/card/card.component.scss
@@ -13,6 +13,7 @@
     img {
       cursor: pointer;
       transition: all 0.25s;
+      max-width: 128px;
 
       &:hover {
         transform: scale(1.25);
