--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -1,11 +1,11 @@
 <mat-card>
   <form
-    class="login-form"
+    class="login-form animate__animated animate__fadeIn"
     autocomplete="off"
     [formGroup]="loginForm"
     (ngSubmit)="submit()"
   >
-    <h1>Login</h1>
+    <h2>Login</h2>
 
     <mat-form-field appearance="fill">
       <mat-label>Email</mat-label>
