--- a/src/app/modules/pokemons/components/form/form.component.html
+++ b/src/app/modules/pokemons/components/form/form.component.html
@@ -41,5 +41,7 @@
     (ngModelChange)="uploadImg($event)"
   />
 
-  <button mat-raised-button>{{ "Create" | uppercase }}</button>
+  <div class="btn-container">
+    <button type="submit" mat-raised-button>{{ "Create" | uppercase }}</button>
+  </div>
 </form>
