--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,3 +1,3 @@
 <section class="login-page">
-  <pok-login-form></pok-login-form>
+  <pok-login-form (loginEmitter)="login($event)"></pok-login-form>
 </section>
