--- a/src/app/modules/pokemons/pokemons.component.html
+++ b/src/app/modules/pokemons/pokemons.component.html
@@ -1,5 +1,14 @@
-<pok-navbar></pok-navbar>
-<main class="container">
-  <router-outlet></router-outlet>
-</main>
-<pok-footer></pok-footer>
+<mat-drawer-container autosize (backdropClick)="opened = false">
+  <pok-navbar
+    [opened]="opened"
+    (sideNavEmitter)="showSideNav($event)"
+  ></pok-navbar>
+  <mat-drawer [opened]="opened">
+    <pok-mobile-nav (navEmitter)="opened = false"></pok-mobile-nav>
+  </mat-drawer>
+
+  <main class="container">
+    <router-outlet></router-outlet>
+  </main>
+  <pok-footer></pok-footer>
+</mat-drawer-container>
