--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar class="footer">
-  <p>{{ date | date }}</p>
+  <img
+    class="pokeball"
+    src="https://pokemon-world-imdoug.netlify.app/img/pokeball.svg"
+  />
 </mat-toolbar>
