--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -3,3 +3,17 @@
 .footer {
   @include center;
 }
+.pokeball {
+  opacity: 0.15;
+  width: 45px;
+
+  animation: rotation 20s infinite linear;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
+}
