--- a/src/app/modules/pokemons/components/form/form.component.scss
+++ b/src/app/modules/pokemons/components/form/form.component.scss
@@ -3,6 +3,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  max-width: 100vw;
   min-width: 50vw;
   padding: 3rem 1rem;
   text-align: center;
@@ -13,8 +14,13 @@
 
   .group {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
+
+    @media (min-width: 991px) {
+      flex-direction: row;
+    }
 
     mat-form-field {
       min-width: 48%;
