--- a/src/app/modules/welcome/components/routes/routes.component.scss
+++ b/src/app/modules/welcome/components/routes/routes.component.scss
@@ -5,7 +5,7 @@
   border-radius: 1rem;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: repeat(3, 1fr);
   grid-gap: 2rem;
   min-height: calc(100vh - 144px);
   margin: 0 auto;
