--- a/src/app/modules/pokemons/pages/list/list.component.html
+++ b/src/app/modules/pokemons/pages/list/list.component.html
@@ -1,7 +1,10 @@
 <pok-search (emitSearch)="searchPokemons($event)"></pok-search>
 
 <ng-container *ngIf="pokemons$ | async as pokemons; else loading">
-  <pok-list-grid [pokemons]="pokemons"></pok-list-grid>
+  <pok-list-grid
+    (listEmitter)="updateList($event)"
+    [pokemons]="pokemons"
+  ></pok-list-grid>
 </ng-container>
 
 <ng-template #loading>
