--- a/src/app/modules/pokemons/components/card/card.component.html
+++ b/src/app/modules/pokemons/components/card/card.component.html
@@ -8,12 +8,7 @@
     </mat-card-content>
 
     <mat-card-actions class="card-actions">
-      <button
-        [disabled]="inTeam"
-        mat-icon-button
-        color="warn"
-        (click)="addToTeam()"
-      >
+      <button mat-icon-button color="warn" (click)="addToTeam()">
         <mat-icon *ngIf="!pokemon.inTeam">favorite_border</mat-icon>
         <mat-icon *ngIf="pokemon.inTeam">favorite</mat-icon>
       </button>
