--- a/src/app/core/components/mobile-nav/mobile-nav.component.html
+++ b/src/app/core/components/mobile-nav/mobile-nav.component.html
@@ -22,7 +22,7 @@
       routerLinkActive="active"
       class="nav-list-item"
     >
-      Form
+      Create
     </li>
     <li
       (click)="handleLinkClick()"
@@ -30,7 +30,7 @@
       routerLinkActive="active"
       class="nav-list-item"
     >
-      Team
+      My Team
     </li>
   </ul>
 </nav>
