--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -16,14 +16,14 @@
         routerLinkActive="active"
         class="nav-list-item"
       >
-        Form
+        Create
       </li>
       <li
         routerLink="/pokemons/team"
         routerLinkActive="active"
         class="nav-list-item"
       >
-        Team
+        My Team
       </li>
     </ul>
   </nav>
