--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -9,8 +9,8 @@
 
     &-item {
       cursor: pointer;
+      letter-spacing: 3px;
       text-transform: uppercase;
-
       transition: all 0.5s;
 
       &:hover {
