--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -25,6 +25,7 @@
       >
         My Team
       </li>
+      <li class="nav-list-item" (click)="installByUser()">Install</li>
     </ul>
   </nav>
 </mat-toolbar>
